k8s/app1_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
spec:
  type: NodePort
  selector:
    app: app1-nginx
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
