k8s/app2_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
spec:
  type: NodePort
  selector:
    app: app2-nginx
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30090
