k8s/app1_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress
  namespace: app1-namespace
spec:
  ingressClassName: app1-ingress
  rules:
  - http:
      paths:
      - path: /app1
        pathType: Exact
        backend:
          service:
            name: app1-svc
            port:
              number: 80
