k8s/app2_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
  namespace: app2-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.mariam.com
    http:
      paths:
      - path: /app2
        pathType: ImplementationSpecific
        backend:
          service:
            name: app2-svc
            port:
              number: 80
